ingress-nginx/07-mirror-2/mirror3-echo-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-with-mirror3
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
        mirror /mirror334556; # 配置多次该项则可放大N倍流量
    nginx.ingress.kubernetes.io/server-snippet: |
        location = /mirror334556 {
            internal;
            #access_log off; # 关闭mirror请求日志
            set $target 10.106.66.216;
            set $proxy_host $target; # 是否更改 host
            #set $proxy_host $host; # 是否更改 host
            proxy_pass http://$target$request_uri;
        }
spec:
  rules:
  - host: mirror3.echo.example 
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
